# django-template

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: ci.yml  github-ci.yml
src/: Makefile  pyproject.toml
src/api/: tasks.py  views.py
src/api/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
